RESOLVED FIXED25409
[GTK] incorrectly fallsback on cancellation
https://bugs.webkit.org/show_bug.cgi?id=25409
Summary [GTK] incorrectly fallsback on cancellation
Gustavo Noronha (kov)
Reported 2009-04-26 10:05:36 PDT
On some sites, there are some frames appearing with the fallback content when they shouldn't. The error message that is presented is that the load was cancelled. Also, our shouldFallBack implementation seems to miss some cancellation cases, which makes some tests fail.
Attachments
Fix fallback and cancellation handling (2.00 KB, patch)
2009-04-26 10:28 PDT, Gustavo Noronha (kov)
no flags
Do not fallback on cancellation and load interruption caused by policy change. (1.56 KB, patch)
2009-04-26 17:28 PDT, Gustavo Noronha (kov)
xan.lopez: review+
Check if we should use the fallback content in didFailLoad. (1.66 KB, patch)
2009-04-26 17:28 PDT, Gustavo Noronha (kov)
xan.lopez: review+
Gustavo Noronha (kov)
Comment 1 2009-04-26 10:28:24 PDT
Created attachment 29803 [details] Fix fallback and cancellation handling WebKit/gtk/ChangeLog | 16 ++++++++++++++++ WebKit/gtk/WebCoreSupport/FrameLoaderClientGtk.cpp | 8 +++++++- 2 files changed, 23 insertions(+), 1 deletions(-)
Gustavo Noronha (kov)
Comment 2 2009-04-26 17:28:09 PDT
Created attachment 29809 [details] Do not fallback on cancellation and load interruption caused by policy change. WebKit/gtk/ChangeLog | 14 ++++++++++++++ WebKit/gtk/WebCoreSupport/FrameLoaderClientGtk.cpp | 3 +-- 2 files changed, 15 insertions(+), 2 deletions(-)
Gustavo Noronha (kov)
Comment 3 2009-04-26 17:28:13 PDT
Created attachment 29810 [details] Check if we should use the fallback content in didFailLoad. WebKit/gtk/ChangeLog | 14 ++++++++++++++ WebKit/gtk/WebCoreSupport/FrameLoaderClientGtk.cpp | 6 ++++++ 2 files changed, 20 insertions(+), 0 deletions(-)
Xan Lopez
Comment 4 2009-04-26 22:40:48 PDT
Comment on attachment 29809 [details] Do not fallback on cancellation and load interruption caused by policy change. Looks good.
Xan Lopez
Comment 5 2009-04-26 22:44:07 PDT
Comment on attachment 29810 [details] Check if we should use the fallback content in didFailLoad. Perhaps you can add the same comment to the signal emission than Jan did, to be consistent. r=me otherwise.
Gustavo Noronha (kov)
Comment 6 2009-04-27 07:54:55 PDT
Landed as r42888, r42889 with Xan's comment addressed.
Note You need to log in before you can comment on or make changes to this bug.