2009-04-27  Gustavo Noronha Silva  <gns@gnome.org>

Reviewed by Xan Lopez.

        https://bugs.webkit.org/show_bug.cgi?id=25409
        [GTK] incorrectly fallsback on cancellation

        Correctly handle cancellation and frame loading interruption
        caused by policy change.  This also fixes
        fast/frames/location-change.html.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::shouldFallBack):

Canonical link: https://commits.webkit.org/34938@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42888 268f45cc-cd09-0410-ab3c-d52691b4dbfc